# shoppin-assignment

./: .gitignore  README.md  freakins.json  littlebox.json  main.py  output.json  pyproject.toml  requirements.txt  stores.txt
docs/: cost_analysis.md
src/: service.py
src/extractors/: base.py  factory.py  freakins.py  generic_shopify.py  littleboxindia.py  squah.py  suqah.py  westside.py
src/models/: size_chart.py
src/utils/: gemini_extractor.py  http_client.py  parser.py  rate_limiter.py  selenium_client.py
tests/: test_extractors.py  test_parser.py
